Fix navbar covering section headers after clicking link

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
     background-color: var(--bs-light);
 }
 
+
 @media (prefers-color-scheme: dark) {
     body {
         background-color: var(--bs-dark);
@@ -24,6 +25,13 @@ body {
     img {
         opacity: 0.8;
     }
+}
+
+.anchor {
+    display: block;
+    height: 100px;
+    margin-top: -100px;
+    visibility: hidden;
 }
 
 .zoom {
